apps/choremane/base/frontend/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: choremane
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: traefik
spec:
  tls:
    - hosts:
        - chores.stillon.top
      secretName: chores-stillon-top-tls
  rules:
    - host: chores.stillon.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
